package com.gestioncitas.plataformacitas;

public class Especialidad {
}
