@startuml Diagrama_Clases_JPA

skinparam shadowing false
skinparam classFontSize 12
skinparam linetype ortho

package com.gestioncitas {

    ' ===== Tablas (Entidades JPA) =====

    abstract class Usuario {
        - id : Long
        - nombre : String
        - correo : String
        - password : String
        - activo : Boolean
        - verificado : Boolean
        - rol : RolUsuario
        - tokenVerificacion : String
        - tokenExpiracion : LocalDateTime
        - tokenRecuperacion : String
        - tokenRecuperacionExpiracion : LocalDateTime
    }

    class Administrador {
    }

    class Cliente {
        - telefono : String
        - citas : List<Cita>
    }

    class Empleado {
        - especialidad : Especialidad
        - servicios : List<Servicio>
        - horarios : List<HorarioDisponibilidad>
        - citas : List<Cita>
    }

    class Especialidad {
        - id : Long
        - nombre : String
        - descripcion : String
        - empleados : List<Empleado>
    }

    class CategoriaServicio {
        - id : Long
        - nombre : String
        - descripcion : String
        - servicios : List<Servicio>
    }

    class Servicio {
        - id : Long
        - nombre : String
        - descripcion : String
        - precio : BigDecimal
        - duracionMinutos : Integer
        - activo : Boolean
        - categoria : CategoriaServicio
        - empleados : List<Empleado>
    }

    class HorarioDisponibilidad {
        - id : Long
        - fecha : LocalDate
        - horaInicio : LocalTime
        - horaFin : LocalTime
        - estado : String
        - empleado : Empleado
    }

    class Cita {
        - id : Long
        - fecha : LocalDate
        - hora : LocalTime
        - estado : String
        - fechaRegistro : LocalDateTime
        - fechaUltimaModificacion : LocalDateTime
        - detalleUltimoCambio : String
        - cliente : Cliente
        - empleado : Empleado
        - servicio : Servicio
    }

    class Notificacion {
        - id : Long
        - mensaje : String
        - tipo : String
        - leida : Boolean
        - fechaCreacion : LocalDateTime
        - usuario : Usuario
    }

    ' ===== Capa de Logica de Negocio (Servicios) =====

    class UsuarioService <<service>> {
        + autenticar(correo, password) : Optional<Usuario>
        + registrar(cliente) : Optional<Cliente>
        + verificar(token) : Optional<Usuario>
        + solicitarRecuperacion(correo) : Optional<Usuario>
        + tokenRecuperacionExiste(token) : boolean
        + tokenRecuperacionValido(token) : boolean
        + restablecerPassword(token, password) : Optional<Usuario>
    }

    class EmpleadoService <<service>> {
        + crear(empleado) : Empleado
        + actualizar(id, empleado) : Empleado
        + darDeBaja(id) : Empleado
        + listarActivos() : List<Empleado>
    }

    class HorarioDisponibilidadService <<service>> {
        + crear(horario) : HorarioDisponibilidad
        + asignar(horario) : HorarioDisponibilidad
        + actualizar(id, horario) : HorarioDisponibilidad
        + eliminar(id) : void
        + buscarPorId(id) : HorarioDisponibilidad
        + listarTodos() : List<HorarioDisponibilidad>
        + listarPorEmpleado(empleadoId) : List<HorarioDisponibilidad>
        + listarPorRangoFechas(desde, hasta) : List<HorarioDisponibilidad>
        + listarDisponibles(empleadoId, fecha) : List<HorarioDisponibilidad>
        + consultarDisponibilidad(empleadoId, fecha) : List<HorarioDisponibilidad>
        + crearEnBloque(empleadoId, periodo, dias) : List<HorarioDisponibilidad>
    }

    class CitaService <<service>> {
        + consultarDisponibilidad(servicioId, fecha) : List<HorarioDisponibilidad>
        + consultarDisponibilidadRango(servicioId, desde, hasta) : List<HorarioDisponibilidad>
        + reservarCita(cita) : Cita
        + editarCita(id, cita) : void
        + cancelarCita(id) : void
        + cancelarCitaCliente(citaId, clienteId) : Cita
        + reprogramarCita(cita) : Cita
        + eliminarCitaCliente(citaId, clienteId) : void
        + confirmarCita(citaId, empleadoId) : void
        + completarCita(citaId, empleadoId) : void
        + cancelarCitaEmpleado(citaId, empleadoId) : void
        - validarBloqueDisponible(empleadoId, fecha, horaInicio, horaFin) : void
    }

    class NotificacionService <<service>> {
        + crear(usuarioId, mensaje, tipo) : Notificacion
        + listarPorUsuario(usuarioId) : List<Notificacion>
        + contarNoLeidas(usuarioId) : long
        + marcarComoLeida(notificacionId) : void
        + notificarAdmins(mensaje, tipo) : void
    }

    class HistorialCitasService <<service>> {
        + listarPorCliente(clienteId) : List<Cita>
    }

    class CorreoService <<service>> {
        + enviarVerificacion(usuario) : void
        + enviarRecuperacion(usuario) : void
    }

    ' Relaciones de herencia Java (tablas)
    Usuario <|-- Administrador
    Usuario <|-- Cliente
    Usuario <|-- Empleado

    ' Relaciones de composicion/asociacion entre tablas
    Empleado "1" --> "1" Especialidad : tiene
    Servicio "1" --> "1" CategoriaServicio : pertenece a
    HorarioDisponibilidad "*" --> "1" Empleado : asignado a

    Empleado "1" *-- "*" HorarioDisponibilidad
    Empleado "1" *-- "*" Cita
    Cliente "1" *-- "*" Cita

    Empleado "*" -- "*" Servicio : asociados
    Cita "*" --> "1" Servicio : reserva

    Usuario "1" *-- "*" Notificacion : recibe

    ' Dependencias de los servicios sobre las entidades
    UsuarioService ..> Usuario : gestiona
    UsuarioService ..> Cliente : registra
    EmpleadoService ..> Empleado : gestiona
    HorarioDisponibilidadService ..> HorarioDisponibilidad : gestiona
    CitaService ..> Cita : gestiona
    NotificacionService ..> Notificacion : gestiona
    HistorialCitasService ..> Cita : consulta

    ' Dependencia entre servicios
    UsuarioService ..> CorreoService : envia correos
    CitaService ..> NotificacionService : notifica
}

@enduml

